--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<img src="https://tse1.mm.bing.net/th?id=OIP.rpheYhnm3CzRrxYwusmX8AHaFj&pid=Api&P=0" alt="Dog Image">
 
 </body>
 
